// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the with a retry button 1`] = `
<styles__ErrorWrapper>
  <Typography__H2
    color="darkBlue"
  >
    Something broke!
  </Typography__H2>
  <Layout__VerticalSpacer
    size="large"
  />
  <Typography__Paragraph
    color="darkBlue"
  >
    This is an error message
  </Typography__Paragraph>
  <Layout__VerticalSpacer
    size="large"
  />
  <Button
    color="pink"
    isShiny={true}
    onClick={[MockFunction]}
  >
    Retry
  </Button>
  <Layout__VerticalSpacer
    size="medium"
  />
  <Link
    href="/"
  >
    <a
      title="home"
    >
      <Button
        isShiny={true}
      >
        Home
      </Button>
    </a>
  </Link>
</styles__ErrorWrapper>
`;

exports[`renders the with an error message 1`] = `
<styles__ErrorWrapper>
  <Typography__H2
    color="darkBlue"
  >
    Something broke!
  </Typography__H2>
  <Layout__VerticalSpacer
    size="large"
  />
  <Typography__Paragraph
    color="darkBlue"
  >
    This is an error message
  </Typography__Paragraph>
  <Layout__VerticalSpacer
    size="large"
  />
  <Link
    href="/"
  >
    <a
      title="home"
    >
      <Button
        isShiny={true}
      >
        Home
      </Button>
    </a>
  </Link>
</styles__ErrorWrapper>
`;
